K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
  namespace: wisecow
spec:
  type: NodePort
  selector:
    app: wisecow
  ports:
    - protocol: TCP
      port: 4499         # Service port
      targetPort: 4499   # Container port
